--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79ec67">  <td>23/01/29 12:06:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchBrowser()[pri:0, instance:test.LoginTests@1534f01b]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1546693040</td>   <td></td> </tr>
-<tr bgcolor="b2b0b4">  <td>23/01/29 12:06:29</td>   <td>11486</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.loginWithInvalidEmailInvalidPassword()[pri:0, instance:test.LoginTests@1534f01b]">loginWithInvalidEmailInvalidPassword</td> 
-  <td>main@1546693040</td>   <td></td> </tr>
+<tr bgcolor="917ba2">  <td>23/02/04 14:17:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchBrowser()[pri:0, instance:test.LoginTests@291f18]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@279566689</td>   <td></td> </tr>
+<tr bgcolor="61cfa1">  <td>23/02/04 14:17:58</td>   <td>19037</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.selectMenuOptionTest()[pri:0, instance:test.LoginTests@291f18]">selectMenuOptionTest</td> 
+  <td>main@279566689</td>   <td></td> </tr>
 </table>
