--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">WebPage Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">3,211</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Basic Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">33,581</td><td>regression</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">WebPage Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">test.SecondTests</td><td><a href="#m0">handleHoverOverDropdown</a></td><td rowspan="1">1675616557612</td><td rowspan="1">302</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Basic Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">test.ContactUsTests</td><td><a href="#m0">submitContactForm</a></td><td rowspan="1">1676132852264</td><td rowspan="1">4645</td></tr><tr class="passedodd"><td rowspan="3">test.LoginTests</td><td><a href="#m1">loginWithInvalidEmailInvalidPassword</a></td><td rowspan="2">1676132838226</td><td rowspan="2">2055</td></tr><tr class="passedodd"><td><a href="#m2">loginWithInvalidEmailInvalidPassword</a></td></tr><tr class="passedodd"><td><a href="#m3">selectMenuOptionTest</a></td><td rowspan="1">1676132845218</td><td rowspan="1">730</td></tr></tbody>
 </table>
-<h2>WebPage Test</h2><h3 id="m0">test.SecondTests#handleHoverOverDropdown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Basic Test</h2><h3 id="m0">test.ContactUsTests#submitContactForm</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>john</td><td>doe</td><td>mail@example.com</td><td>test comments</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">test.LoginTests#loginWithInvalidEmailInvalidPassword</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>invalid</td><td>123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">test.LoginTests#loginWithInvalidEmailInvalidPassword</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>#3$6aks</td><td>#3ajk</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">test.LoginTests#selectMenuOptionTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
