--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b2b0b4">  <td>23/02/05 11:15:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondTests.handleHoverOverDropdown()[pri:0, instance:test.SecondTests@4ddced80]">handleHoverOverDropdown</td> 
-  <td>main@1667148529</td>   <td></td> </tr>
-<tr bgcolor="79ec67">  <td>23/02/05 11:15:07</td>   <td>-3152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchBrowser()[pri:0, instance:test.SecondTests@4ddced80]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1667148529</td>   <td></td> </tr>
+<tr bgcolor="b2b0b4">  <td>23/02/07 21:04:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.submitContactForm()[pri:0, instance:test.ContactUsTest@78e117e3]">submitContactForm</td> 
+  <td>main@501187768</td>   <td></td> </tr>
 </table>
