--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,19 +4,48 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>test.SecondTests</td>
+<td>test.LoginTests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>handleHoverOverDropdown</td>
-<td>&nbsp;</td></tr>
+<td>selectMenuOptionTest</td>
+<td>regression smoke </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>handleBrowserAlertTest</td>
+<td>loginWithInvalidEmailInvalidPassword</td>
+<td>regression </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>launchBrowser</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>test.ContactUsTests</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>submitContactForm</td>
+<td>regression smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
