--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>LoginTests.selectMenuOptionTest()[pri:0, instance:test.LoginTests@1184ab05]<br/>LoginTests.loginWithInvalidEmailInvalidPassword(java.lang.String, java.lang.String)[pri:0, instance:test.LoginTests@1184ab05]<br/>ContactUsTests.submitContactForm(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.ContactUsTests@3aefe5e5]<br/></td></tr>
+<tr><td>smoke</td><td>LoginTests.selectMenuOptionTest()[pri:0, instance:test.LoginTests@1184ab05]<br/>ContactUsTests.submitContactForm(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.ContactUsTests@3aefe5e5]<br/></td></tr>
+</table>
