--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,20 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ae8fd0">  <td>23/02/11 11:27:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchBrowser(java.lang.String)[pri:0, instance:test.LoginTests@1184ab05]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="8ee691">  <td>23/02/11 11:27:10</td>   <td>7541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.loginWithInvalidEmailInvalidPassword(java.lang.String, java.lang.String)[pri:0, instance:test.LoginTests@1184ab05]">loginWithInvalidEmailInvalidPassword</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>23/02/11 11:27:13</td>   <td>9947</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchBrowser(java.lang.String)[pri:0, instance:test.LoginTests@1184ab05]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="8ee691">  <td>23/02/11 11:27:18</td>   <td>14818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.loginWithInvalidEmailInvalidPassword(java.lang.String, java.lang.String)[pri:0, instance:test.LoginTests@1184ab05]">loginWithInvalidEmailInvalidPassword</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>23/02/11 11:27:20</td>   <td>16875</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchBrowser(java.lang.String)[pri:0, instance:test.LoginTests@1184ab05]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="8ee691">  <td>23/02/11 11:27:25</td>   <td>21810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.selectMenuOptionTest()[pri:0, instance:test.LoginTests@1184ab05]">selectMenuOptionTest</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>23/02/11 11:27:25</td>   <td>22545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchBrowser(java.lang.String)[pri:0, instance:test.ContactUsTests@3aefe5e5]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1105423942</td>   <td></td> </tr>
-<tr bgcolor="c7b6bd">  <td>23/02/11 11:27:32</td>   <td>28856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTests.submitContactForm(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.ContactUsTests@3aefe5e5]">submitContactForm</td> 
-  <td>main@1105423942</td>   <td></td> </tr>
+<tr bgcolor="8885ab">  <td>23/02/25 11:15:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchBrowser(java.lang.String)[pri:0, instance:test.ContactUsTests@47d90b9e]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@825658265</td>   <td></td> </tr>
+<tr bgcolor="8ee691">  <td>23/02/25 11:15:48</td>   <td>5362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTests.submitContactForm(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.ContactUsTests@47d90b9e]">submitContactForm</td> 
+  <td>main@825658265</td>   <td></td> </tr>
 </table>
